# pixelart-wallpaper

./: CMakeLists.txt  LICENSE  README.md  install.sh  metadata.json  run_tests.sh  uninstall.sh
contents/config/: main.xml
contents/ui/: config.qml  main.qml
contents/ui/components/: WallhavenAPI.qml
tests/: README.md  main.cpp  tst_wallhaven_api.qml
